--- a/Common.Messaging.csproj
+++ b/Common.Messaging.csproj
@@ -4,20 +4,21 @@
 		<RootNamespace>Common.Messaging</RootNamespace>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-
-		<!-- NuGet Package Metadata -->
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Common.Messaging</PackageId>
-		<Version>1.0.3</Version>
-		<Authors>Kalule Dison</Authors>
-		<Company>Kalule Software</Company>
+		<Version>1.0.0</Version>
 		<Description>Reusable messaging library for sending email and defining message contracts.</Description>
 		<PackageTags>email messaging smtp microservice</PackageTags>
-		<RepositoryUrl>https://github.com/your-org/Common.Messaging</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Confluent.Kafka" Version="2.10.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.6" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Implements\" />
 	</ItemGroup>
 </Project>
